--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body>
 
-  <h1 id="level-title">Press Space Bar to Start</h1>
+  <h1 id="level-title">Press Spacebar to Start</h1>
 
   <div class="container">
-    <div lass="row">
+
+    <div class="row">
       <div type="button" id="green" class="btn green">
       </div>
       <div type="button" id="red" class="btn red">
