add h2 and make it blink

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
 
-  <h1 id="level-title">Press Spacebar to Start</h1>
-  
+  <div class="headings">
+    <h1 id="main-title">Simon</h1>
+    <h2 id='subtitle'>Press Spacebar to Start</h2>
+  </div>
 
   <div class="container">
 
