add sounds on/off notification

--- a/index.html
+++ b/index.html
@@ -128,6 +128,17 @@
     </div>
   </section>
 
+
+  <section id='sound-notification' class="pop-over">
+    <div class='padding-btm-0'>
+      <i class="nes-bcrikko"></i>
+      <div class="nes-balloon from-left pop-over-msg">
+        <p id='sound-notification-text'>Sounds off.</p>
+      </div>
+
+    </div>
+  </section>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="game.js" charset="utf-8"></script>
 </body>
