--- a/index.html
+++ b/index.html
@@ -11,121 +11,118 @@
 
 <body>
 
-  <div class="headings">
+  <header class="headings">
     <h1 id="main-title">Simon</h1>
     <h2 id='subtitle'>Press Spacebar to Start</h2>
-  </div>
+  </header>
 
-  <div class="container">
-
+  <section class="btns-container">
     <div class="row">
       <div type='button' id='green' class="nes-container is-rounded game-btn green"> </div>
       <div type='button' id='red' class="nes-container is-rounded game-btn red"> </div>
     </div>
-
     <div class="row">
       <div type='button' id='yellow' class="nes-container is-rounded game-btn yellow"> </div>
       <div type='button' id='blue' class="nes-container is-rounded game-btn blue"> </div>
     </div>
+  </section>
 
-  </div>
-
-  <section>
+  <footer>
     <h2 class='controls'>
-      Press 'H' for
-      <button type="button" id='open-how-to-play' class="nes-btn">
-        How to Play
-      </button>
-      'O' for
-      <button type="button" id='open-options' class="nes-btn">
-        Options
-      </button>
-      'A' for
-      <button type="button" id='open-about' class="nes-btn">
-        About
-      </button>
+      <span class='avoid-wrap'>
+        <span class='keyboards-only'>Press 'H' for</span>
+        <button type="button" id='open-how-to-play' class="nes-btn dont-start">
+          <span class='hotkey'>How to Play</span>
+        </button>
+      </span>
+      <span class='avoid-wrap'>
+        <span class='keyboards-only'>'O' for</span>
+        <button type="button" id='open-options' class="nes-btn dont-start">
+          <span class='hotkey'>Options</span>
+        </button>
+        <span class='avoid-wrap'>
+          <span class='keyboards-only'>'A' for</span>
+          <button type="button" id='open-about' class="nes-btn dont-start">
+            <span class='hotkey'>About</span>
+          </button>
+        </span>
+      </span>
     </h2>
+  </footer>
+
+  <section id="how-to-play" class="modal-bg dont-start">
+    <article class="modal-content how-to-play">
+      <p class="title">How to Play</p>
+      <p>Simon randomly flashes a color one at a time. Your job is to remember the order and click on them to prove it.</p>
+      <p>There are infinite levels. The game ends when your memory fails.</p>
+      <menu class="dialog-menu padding-left-0">
+        <button id='close-how-to-play' class="nes-btn is-primary hotkey">Confirm</button>
+      </menu>
+    </article>
   </section>
 
-  <section>
-    <div id="how-to-play" class="modal-bg">
-      <div class="modal-content how-to-play">
-        <p class="title">How to Play</p>
-        <p>Simon randomly flashes a color one at a time. Your job is to remember the order and click on them to prove it.</p>
-        <p>There are infinite levels. The game ends when your memory fails.</p>
-        <menu class="dialog-menu padding-left-0">
-          <button id='close-how-to-play' class="nes-btn is-primary">Confirm</button>
-        </menu>
+  <section id="options" class="modal-bg dont-start">
+    <div class="modal-content options">
+      <p class="title">Options</p>
+      <div class='flex-center'>
+        <table class='align-self-center text-left'>
+          <tbody>
+            <tr>
+              <td>
+                <span class='hotkey'>Sounds:</span>
+              </td>
+              <td>
+                <label>
+                  <input type="radio" id='sound-on' class="nes-radio" name="sound" checked />
+                  <span>On</span>
+                </label>
+              </td>
+              <td>
+                <label>
+                  <input type="radio" id='sound-off' class="nes-radio" name="sound" />
+                  <span>Off</span>
+                </label>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span class='hotkey'>Dark Mode:</span>
+              </td>
+              <td>
+                <label>
+                  <input type="radio" id='dark-mode-on' class="nes-radio" name="dark-mode" />
+                  <span>On</span>
+                </label>
+              </td>
+              <td class='text-left'>
+                <label>
+                  <input type="radio" id='dark-mode-off' class="nes-radio" name="dark-mode" checked />
+                  <span>Off</span>
+                </label>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+      <menu class="dialog-menu padding-left-0">
+        <button id='close-options' class="nes-btn is-primary hotkey">Confirm</button>
+      </menu>
     </div>
   </section>
 
-  <section>
-    <div id="options" class="modal-bg">
-      <div class="modal-content options">
-        <p class="title">Options</p>
-        <div class='flex-center'>
-          <table class='align-self-center text-left'>
-            <tbody>
-              <tr>
-                <td>
-                  <span>Sounds:</span>
-                </td>
-                <td>
-                  <label>
-                    <input type="radio" id='sound-on' class="nes-radio" name="sound" checked />
-                    <span>On</span>
-                  </label>
-                </td>
-                <td>
-                  <label>
-                    <input type="radio" id='sound-off' class="nes-radio" name="sound" />
-                    <span>Off</span>
-                  </label>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span>Dark Mode:</span>
-                </td>
-                <td>
-                  <label>
-                    <input type="radio" id='dark-mode-on' class="nes-radio" name="dark-mode" />
-                    <span>On</span>
-                  </label>
-                </td>
-                <td class='text-left'>
-                  <label>
-                    <input type="radio" id='dark-mode-off' class="nes-radio" name="dark-mode" checked />
-                    <span>Off</span>
-                  </label>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <menu class="dialog-menu padding-left-0">
-          <button id='close-options' class="nes-btn is-primary">Confirm</button>
-        </menu>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <div id="about" class="modal-bg">
-      <div class="modal-content about">
-        <p class="title">About</p>
-        <p>Made as an extension to a <a href='https://www.appbrewery.co/' target='_blank'>TAB project</a></p>
-        <p>8-bit graphics by <a href='https://github.com/nostalgic-css/NES.css' target='_blank'>NES.css</a></p>
-        <a href='https://github.com/benmneb' target='_blank'><i class="nes-icon github is-large"></i>
-          <p>benmneb</p>
-        </a>
-        <menu class="dialog-menu padding-left-0">
-          <button id='close-about' class="nes-btn">Close</button>
-          <a class="nes-btn is-primary" href='https://github.com/benmneb' target='_blank'>View on GitHub</a>
-        </menu>
-      </div>
-    </div>
+  <section id="about" class="modal-bg dont-start">
+    <article class="modal-content about">
+      <p class="title">About</p>
+      <p>Made as an extension to a <a href='https://www.appbrewery.co/' target='_blank' class='hotkey'>TAB project</a></p>
+      <p>8-bit graphics by <a href='https://github.com/nostalgic-css/NES.css' target='_blank' class='hotkey'>NES.css</a></p>
+      <a href='https://github.com/benmneb' target='_blank'><i class="nes-icon github is-large"></i>
+        <p>benmneb</p>
+      </a>
+      <menu class="dialog-menu padding-left-0">
+        <button id='close-about' class="nes-btn hotkey">Close</button>
+        <a class="nes-btn is-primary" href='https://github.com/benmneb' target='_blank'>View on <span class='hotkey'>GitHub</span></a>
+      </menu>
+    </article>
   </section>
 
 
@@ -135,7 +132,6 @@
       <div class="nes-balloon from-left pop-over-msg">
         <p id='sound-notification-text'>Sounds off.</p>
       </div>
-
     </div>
   </section>
 
