--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
 <body>
 
-  <header class="headings">
-    <h1 id="main-title">Simon</h1>
-    <h2 id='subtitle'>Press Spacebar to Start</h2>
-  </header>
-
-  <div class='loading-bg'>
+  <section class='loading-bg'>
     <div class='loading-container'>
       <p class="title">Loading...</p>
       <progress class="nes-progress is-primary" value="0" max="100"></progress>
     </div>
-  </div>
+  </section>
+
+  <header class="headings">
+    <h1 id="main-title">Simon</h1>
+    <h2 id='subtitle'>Press Spacebar to Start</h2>
+  </header>
 
   <section class="btns-container">
     <div class="row">
@@ -57,8 +57,8 @@
     </h2>
   </footer>
 
-  <section id="how-to-play" class="modal-bg dont-start">
-    <article class="modal-content how-to-play">
+  <section id="how-to-play" class="dialog-bg dont-start">
+    <article class="dialog-content how-to-play">
       <p class="title">How to Play</p>
       <p>Simon randomly flashes a color one at a time. Your job is to remember the order and click on them to prove it.</p>
       <p>There are infinite levels. The game ends when your memory fails.</p>
@@ -68,8 +68,8 @@
     </article>
   </section>
 
-  <section id="options" class="modal-bg dont-start">
-    <div class="modal-content options">
+  <section id="options" class="dialog-bg dont-start">
+    <div class="dialog-content options">
       <p class="title">Options</p>
       <div class='flex-center'>
         <table class='align-self-center text-left'>
@@ -117,8 +117,8 @@
     </div>
   </section>
 
-  <section id="about" class="modal-bg dont-start">
-    <article class="modal-content about">
+  <section id="about" class="dialog-bg dont-start">
+    <article class="dialog-content about">
       <p class="title">About</p>
       <p>Made as an extension to a <a href='https://www.appbrewery.co/' target='_blank' class='hotkey'>TAB project</a></p>
       <p>8-bit graphics by <a href='https://github.com/nostalgic-css/NES.css' target='_blank' class='hotkey'>NES.css</a></p>
