--- a/index.html
+++ b/index.html
@@ -1,149 +1,148 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>🕹 Simon</title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
+    <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Simon</title>
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-  <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
-</head>
+  <body>
+    <section class="loading-bg">
+      <div class="loading-container">
+        <p class="title">Loading...</p>
+        <progress class="nes-progress is-primary" value="0" max="100"></progress>
+      </div>
+    </section>
 
-<body>
+    <header class="headings">
+      <h1 id="main-title">Simon</h1>
+      <h2 id="subtitle">Press Spacebar to Start</h2>
+    </header>
 
-  <section class='loading-bg'>
-    <div class='loading-container'>
-      <p class="title">Loading...</p>
-      <progress class="nes-progress is-primary" value="0" max="100"></progress>
-    </div>
-  </section>
+    <section class="btns-container">
+      <div class="row">
+        <div type="button" id="green" class="nes-container is-rounded game-btn green"></div>
+        <div type="button" id="red" class="nes-container is-rounded game-btn red"></div>
+      </div>
+      <div class="row">
+        <div type="button" id="yellow" class="nes-container is-rounded game-btn yellow"></div>
+        <div type="button" id="blue" class="nes-container is-rounded game-btn blue"></div>
+      </div>
+    </section>
 
-  <header class="headings">
-    <h1 id="main-title">Simon</h1>
-    <h2 id='subtitle'>Press Spacebar to Start</h2>
-  </header>
-
-  <section class="btns-container">
-    <div class="row">
-      <div type='button' id='green' class="nes-container is-rounded game-btn green"> </div>
-      <div type='button' id='red' class="nes-container is-rounded game-btn red"> </div>
-    </div>
-    <div class="row">
-      <div type='button' id='yellow' class="nes-container is-rounded game-btn yellow"> </div>
-      <div type='button' id='blue' class="nes-container is-rounded game-btn blue"> </div>
-    </div>
-  </section>
-
-  <footer>
-    <h2 class='controls'>
-      <span class='avoid-wrap'>
-        <span class='keyboards-only'>Press 'H' for</span>
-        <button type="button" id='open-how-to-play' class="nes-btn dont-start">
-          <span class='hotkey'>How to Play</span>
-        </button>
-      </span>
-      <span class='avoid-wrap'>
-        <span class='keyboards-only'>'O' for</span>
-        <button type="button" id='open-options' class="nes-btn dont-start">
-          <span class='hotkey'>Options</span>
-        </button>
-        <span class='avoid-wrap'>
-          <span class='keyboards-only'>'A' for</span>
-          <button type="button" id='open-about' class="nes-btn dont-start">
-            <span class='hotkey'>About</span>
+    <footer>
+      <h2 class="controls">
+        <span class="avoid-wrap">
+          <span class="keyboards-only">Press 'H' for</span>
+          <button type="button" id="open-how-to-play" class="nes-btn dont-start">
+            <span class="hotkey">How to Play</span>
           </button>
         </span>
-      </span>
-    </h2>
-  </footer>
+        <span class="avoid-wrap">
+          <span class="keyboards-only">'O' for</span>
+          <button type="button" id="open-options" class="nes-btn dont-start">
+            <span class="hotkey">Options</span>
+          </button>
+          <span class="avoid-wrap">
+            <span class="keyboards-only">'A' for</span>
+            <button type="button" id="open-about" class="nes-btn dont-start">
+              <span class="hotkey">About</span>
+            </button>
+          </span>
+        </span>
+      </h2>
+    </footer>
 
-  <section id="how-to-play" class="dialog-bg dont-start">
-    <article class="dialog-content how-to-play">
-      <p class="title">How to Play</p>
-      <p>Simon randomly flashes a color one at a time. Your job is to remember the order and click on them to prove it.</p>
-      <p>There are infinite levels. The game ends when your memory fails.</p>
-      <menu class="dialog-menu padding-left-0">
-        <button id='close-how-to-play' class="nes-btn is-primary hotkey">Confirm</button>
-      </menu>
-    </article>
-  </section>
+    <section id="how-to-play" class="dialog-bg dont-start">
+      <article class="dialog-content how-to-play">
+        <p class="title">How to Play</p>
+        <p>Simon randomly flashes a color one at a time. Your job is to remember the order and click on them to prove it.</p>
+        <p>There are infinite levels. The game ends when your memory fails.</p>
+        <menu class="dialog-menu padding-left-0">
+          <button id="close-how-to-play" class="nes-btn is-primary hotkey">Confirm</button>
+        </menu>
+      </article>
+    </section>
 
-  <section id="options" class="dialog-bg dont-start">
-    <div class="dialog-content options">
-      <p class="title">Options</p>
-      <div class='flex-center'>
-        <table class='align-self-center text-left'>
-          <tbody>
-            <tr>
-              <td>
-                <span class='hotkey'>Sounds:</span>
-              </td>
-              <td>
-                <label>
-                  <input type="radio" id='sound-on' class="nes-radio" name="sound" checked />
-                  <span>On</span>
-                </label>
-              </td>
-              <td>
-                <label>
-                  <input type="radio" id='sound-off' class="nes-radio" name="sound" />
-                  <span>Off</span>
-                </label>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <span class='hotkey'>Dark Mode:</span>
-              </td>
-              <td>
-                <label>
-                  <input type="radio" id='dark-mode-on' class="nes-radio" name="dark-mode" />
-                  <span>On</span>
-                </label>
-              </td>
-              <td class='text-left'>
-                <label>
-                  <input type="radio" id='dark-mode-off' class="nes-radio" name="dark-mode" checked />
-                  <span>Off</span>
-                </label>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+    <section id="options" class="dialog-bg dont-start">
+      <div class="dialog-content options">
+        <p class="title">Options</p>
+        <div class="flex-center">
+          <table class="align-self-center text-left">
+            <tbody>
+              <tr>
+                <td>
+                  <span class="hotkey">Sounds:</span>
+                </td>
+                <td>
+                  <label>
+                    <input type="radio" id="sound-on" class="nes-radio" name="sound" checked />
+                    <span>On</span>
+                  </label>
+                </td>
+                <td>
+                  <label>
+                    <input type="radio" id="sound-off" class="nes-radio" name="sound" />
+                    <span>Off</span>
+                  </label>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="hotkey">Dark Mode:</span>
+                </td>
+                <td>
+                  <label>
+                    <input type="radio" id="dark-mode-on" class="nes-radio" name="dark-mode" />
+                    <span>On</span>
+                  </label>
+                </td>
+                <td class="text-left">
+                  <label>
+                    <input type="radio" id="dark-mode-off" class="nes-radio" name="dark-mode" checked />
+                    <span>Off</span>
+                  </label>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <menu class="dialog-menu padding-left-0">
+          <button id="close-options" class="nes-btn is-primary hotkey">Confirm</button>
+        </menu>
       </div>
-      <menu class="dialog-menu padding-left-0">
-        <button id='close-options' class="nes-btn is-primary hotkey">Confirm</button>
-      </menu>
-    </div>
-  </section>
+    </section>
 
-  <section id="about" class="dialog-bg dont-start">
-    <article class="dialog-content about">
-      <p class="title">About</p>
-      <p>Made as an extension to a <a href='https://www.appbrewery.co/' target='_blank' class='hotkey'>TAB project</a></p>
-      <p>8-bit graphics by <a href='https://github.com/nostalgic-css/NES.css' target='_blank' class='hotkey'>NES.css</a></p>
-      <a href='https://github.com/benmneb' target='_blank'><i class="nes-icon github is-large"></i>
-        <p>benmneb</p>
-      </a>
-      <menu class="dialog-menu padding-left-0">
-        <button id='close-about' class="nes-btn hotkey">Close</button>
-        <a class="nes-btn is-primary hotkey" href='https://github.com/benmneb' target='_blank'>View on GitHub</a>
-      </menu>
-    </article>
-  </section>
+    <section id="about" class="dialog-bg dont-start">
+      <article class="dialog-content about">
+        <p class="title">About</p>
+        <p>Made as an extension to a <a href="https://www.appbrewery.co/" target="_blank" class="hotkey">TAB project</a></p>
+        <p>
+          8-bit graphics by <a href="https://github.com/nostalgic-css/NES.css" target="_blank" class="hotkey">NES.css</a>
+        </p>
+        <a href="https://github.com/benmneb" target="_blank"
+          ><i class="nes-icon github is-large"></i>
+          <p>benmneb</p>
+        </a>
+        <menu class="dialog-menu padding-left-0">
+          <button id="close-about" class="nes-btn hotkey">Close</button>
+          <a class="nes-btn is-primary hotkey" href="https://github.com/benmneb" target="_blank">View on GitHub</a>
+        </menu>
+      </article>
+    </section>
 
-
-  <section id='sound-notification' class="pop-over">
-    <div class='padding-btm-0'>
-      <i class="nes-bcrikko"></i>
-      <div class="nes-balloon from-left pop-over-msg">
-        <p id='sound-notification-text'>Sounds off.</p>
+    <section id="sound-notification" class="pop-over">
+      <div class="padding-btm-0">
+        <i class="nes-bcrikko"></i>
+        <div class="nes-balloon from-left pop-over-msg">
+          <p id="sound-notification-text">Sounds off.</p>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="game.js" charset="utf-8"></script>
-</body>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="game.js" charset="utf-8"></script>
+  </body>
 </html>
