update github link

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </a>
         <menu class="dialog-menu padding-left-0">
           <button id="close-about" class="nes-btn hotkey">Close</button>
-          <a class="nes-btn is-primary hotkey" href="https://github.com/benmneb" target="_blank">View on GitHub</a>
+          <a class="nes-btn is-primary hotkey" href="https://github.com/benmneb/simon" target="_blank">View on GitHub</a>
         </menu>
       </article>
     </section>
