--- a/app/index.html
+++ b/app/index.html
@@ -143,6 +143,6 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="game.js" charset="utf-8"></script>
+    <script src="scripts.js" charset="utf-8"></script>
   </body>
 </html>
