add favicons and adjust theme-color based on user preference

--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>🕹 Simon</title>
+    <title>Simon</title>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
     <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <meta name="msapplication-TileColor" content="#ffc40d" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#f1f1f1" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#333435" />
   </head>
 
   <body>
