improve table styling

--- a/app/index.html
+++ b/app/index.html
@@ -153,7 +153,7 @@
         <table class="nes-table is-centered">
           <thead>
             <tr>
-              <th>Name</th>
+              <th>Player</th>
               <th>Level</th>
             </tr>
           </thead>
