edit wording of how to play

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,9 @@
     <section id="how-to-play" class="dialog-bg dont-start">
       <article class="dialog-content how-to-play">
         <p class="font-bold">How to Play</p>
-        <p>Simon randomly flashes a color one at a time. Your job is to remember the order and click on them to prove it.</p>
+        <p>
+          Simon randomly flashes a color one at a time. Your job is to remember the sequence and click on them to prove it.
+        </p>
         <p>There are infinite levels. The game ends when your memory fails.</p>
         <menu class="dialog-menu padding-left-0 margin-btm-0">
           <button id="close-how-to-play" class="nes-btn hotkey">Close</button>
